Bug 482151 - No error shown if non-display ICC profile is applied
Summary: No error shown if non-display ICC profile is applied
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_kscreen (other bugs)
Version First Reported In: 6.0.0
Platform: Other Linux
: NOR minor
Target Milestone: ---
Assignee: kscreen-bugs-null@kde.org
URL:
Keywords: usability
Depends on:
Blocks:
 
Reported: 2024-03-01 13:21 UTC by postix
Modified: 2024-12-21 14:28 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.3.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description postix 2024-03-01 13:21:36 UTC
SUMMARY

Right now, when applying a wrong ICC profile, kwin_wayland only logs this error in journalctl
> kwin_core: only display ICC profiles are supported
but there's no warning or hint in kscreen other that if you re-visit the kcm, the profile is no longer shown in the input field.
Comment 1 Zamundaaa 2024-03-01 21:19:08 UTC
In general, KScreen doesn't deal with failures well when applying output configs. We'll need some changes in both KScreen and KWin to do this better
Comment 2 Zamundaaa 2024-12-18 00:58:54 UTC
Git commit 8703be771c56cd9310b88e031262413c050e0e68 by Xaver Hugl.
Committed on 18/12/2024 at 00:05.
Pushed by zamundaaa into branch 'master'.

kcm: show an error message when applying the configuration fails

The error message is plumbed through from KWin, so we can show a warning when
for example an ICC profile couldn't be parsed - instead of that being silently
ignored, and the user having to wonder why it's not working.

M  +7    -4    kcm/kcm.cpp
M  +1    -1    kcm/kcm.h
M  +2    -1    kcm/ui/main.qml

https://invent.kde.org/plasma/kscreen/-/commit/8703be771c56cd9310b88e031262413c050e0e68