kcm: show an error message when applying the configuration fails

The error message is plumbed through from KWin, so we can show a warning when
for example an ICC profile couldn't be parsed - instead of that being silently
ignored, and the user having to wonder why it's not working.

BUG: 482151