kcm/ui/main.qml
@@ -103,7 +103,8 @@ KCM.SimpleKCM {
             }
             invalidConfigMsg.visible = true;
         }
-        function onErrorOnSave() {
+        function onErrorOnSave(reason) {
+            errSaveMsg.text = i18nc("The argument contains the reason for the failure", "Couldn't apply display configuration: %1", reason)
             errSaveMsg.visible = true;
         }
         function onGlobalScaleWritten() {
